--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ body{
 }
 
 .navegacion-principal{
-padding: 1rem;
 display: flex;
 justify-content: space-between;
 }
@@ -42,4 +41,11 @@ justify-content: space-between;
 .navegacion-principal a{
   color: var(--blanco);
   text-decoration: none;
+  font-weight: 700;
+  padding: 1rem;
+}
+
+.navegacion-principal a:hover{
+background-color: var(--primario);
+color: var(--oscuro);
 }
