--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
 }
 
 .contenedor{
-  width: 120rem;
+  max-width: 120rem;
   margin: 0 auto;
 }
 
@@ -35,10 +35,20 @@ body{
 
 .navegacion-principal{
 display: flex;
-justify-content: space-between;
+flex-direction: column;
+
+}
+
+@media screen and (min-width: 768px) {
+  .navegacion-principal{
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .navegacion-principal a{
+  display: block;
+  text-align: center;
   color: var(--blanco);
   text-decoration: none;
   font-weight: 700;
@@ -49,3 +59,5 @@ justify-content: space-between;
 background-color: var(--primario);
 color: var(--oscuro);
 }
+
+
