--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,32 @@
 
 html{
   font-size: 62.5%;
+  box-sizing: border-box;
 }
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body{
   font-size: 16px; /*1rem = 10px */
   font-family: 'Krub', sans-serif;
 }
 
-.titulo{
-  text-align: center;
+h1{
   font-size: 3.8rem;
+}
+
+h2{
+  font-size: 2.8rem;
+}
+
+h3{
+  font-size: 1.8rem;
+}
+
+h1,h2,h3{
+  text-align: center;
 }
 
 .titulo span{
@@ -28,6 +45,25 @@ body{
   margin: 0 auto;
 }
 
+.boton{
+  background-color: var(--secundario);
+  color: var(--blanco);
+  padding: 1rem 3rem;
+  margin-top: 1rem;
+  font-size: 2rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: .5rem;
+  width: 90%;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .boton{
+    width: auto;
+  }
+}
 .nav-bg{
   background-color: var(--secundario);
 
@@ -60,4 +96,31 @@ background-color: var(--primario);
 color: var(--oscuro);
 }
 
+.hero{
+  background-image: url(../img/hero.jpg);
+  background-repeat: no-repeat0;
+  background-size: cover;
+  height: 450px;
+  position: relative;
+}
 
+.contenido-hero {
+position: absolute;
+background-color:rgba(0, 0, 0, .7); /**Anterior**/
+background-color: rgb(0 0 0/ 70%) ;/**nueva**/
+width: 100%;
+height: 100%;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+
+.contenido-hero h2, .contenido-hero p{
+  color: var(--blanco);
+}
+
+.ubicacion{
+  display: flex;
+  align-items: flex-end;
+}
