--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,38 @@ justify-content: center;
   display: flex;
   align-items: flex-end;
 }
+
+/** Servicios **/
+@media screen and (min-width: 768px) {
+  .servicios{
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+  column-gap: 1rem;
+  }
+}
+
+.servicio{
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.servicios h3{
+color: var(--secundario);
+font-weight: normal;
+}
+
+.servicios p{
+line-height: 2;
+text-align: center;
+}
+
+.servicios .iconos{
+  height: 15rem;
+  width: 15rem;
+  background-color: var(--primario);
+  border-radius: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
