--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,43 @@
-:root{
-  --blanco:#FFFFFF;
-  --oscuro: #212121;
-  --primario: #ffc107;
-  --secundario: #008C9C;
-  --gris:#757575;
-  --grisClaro: #DFE9F3;
+:root {
+  --blanco: #ffffff;
+  --negro: #000000;
+  --primario: #3498db;
+  --secundario: #2ecc71;
+  --gris: #95a5a6;
+  --grisClaro: #ecf0f1;
+  
 }
-
-/* Globales */
-html{
+/*  Globales **/
+html {
   font-size: 62.5%;
-  box-sizing: border-box;
+  box-sizing: border-box; /* Hack para Box Model **/
+  scroll-snap-type: y mandatory;
+}
+/** Scroll Snap**/
+.titulo,.navegacion-principal,
+.servicios,.contenedor,
+.contacto {
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
 }
 
 *, *:before, *:after {
   box-sizing: inherit;
 }
-
-body{
-  font-size: 16px; /*1rem = 10px */
+body {
+  font-size: 16px; /* 1rem = 10px */
   font-family: 'Krub', sans-serif;
-  background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
+  background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100% );
 }
-
-.contenedor{
+.contenedor {
   max-width: 120rem;
   margin: 0 auto;
 }
-
-.boton{
+.boton {
   background-color: var(--secundario);
   color: var(--blanco);
   padding: 1rem 3rem;
-  margin-top: 1rem;
+  margin-top: 3rem;
   font-size: 2rem;
   text-decoration: none;
   text-transform: uppercase;
@@ -40,132 +45,149 @@ body{
   border-radius: .5rem;
   width: 90%;
   text-align: center;
+  border: none;
 }
-
-@media screen and (min-width: 768px) {
-  .boton{
-    width: auto;
+@media (min-width: 768px) {
+  .boton {
+      width: auto;
   }
 }
-
-.sombra{
-  -webkit-box-shadow: 0px 15px 5px 0px rgba(112,112,112,0.48);
--moz-box-shadow: 0px 15px 5px 0px rgba(112,112,112,0.48);
-box-shadow: 0px 15px 5px 0px rgba(112,112,112,0.48);
-padding: 2rem;
-border-radius: 1rem;
+.boton:hover {
+  cursor: pointer;
 }
 
-/* Tipografía*/
-h1{
+.sombra {
+  box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+  background-color: var(--blanco);
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
+/* Tipografia */
+h1 {
   font-size: 3.8rem;
 }
-
-h2{
+h2 {
   font-size: 2.8rem;
 }
-
-h3{
+h3 {
   font-size: 1.8rem;
 }
-
-h1,h2,h3{
+h1,h2,h3 {
   text-align: center;
 }
 
-/* Títulos */
-.titulo span{
+
+/* Titulos */
+.titulo span {
   font-size: 2rem;
 }
 
-
-/* Navegacion principal */
-.navegacion-principal{
-display: flex;
-flex-direction: column;
+/** Utilidades **/
+.w-sm-100 {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .w-sm-100 {
+      width: auto;
+  }
+}
+.flex {
+  display: flex;
+}
+.alinear-derecha {
+  justify-content: flex-end;
 }
 
-.nav-bg{
+/* Navegacion Principal */
+.nav-bg {
   background-color: var(--secundario);
 }
-@media screen and (min-width: 768px) {
-  .navegacion-principal{
-    flex-direction: row;
-    justify-content: space-between;
+.navegacion-principal {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .navegacion-principal {
+      flex-direction: row;
+      justify-content: space-between;
   }
 }
 
-.navegacion-principal a{
+.navegacion-principal a {
   display: block;
   text-align: center;
   color: var(--blanco);
   text-decoration: none;
+  font-size: 2rem;
   font-weight: 700;
   padding: 1rem;
 }
-
-.navegacion-principal a:hover{
-background-color: var(--primario);
-color: var(--oscuro);
+.navegacion-principal a:hover {
+  background-color: var(--primario);
+  color: var(--oscuro);
+  
 }
 
 /* Hero */
-.hero{
+.hero {
   background-image: url(../img/hero.jpg);
-  background-repeat: no-repeat0;
+  background-repeat: no-repeat;
   background-size: cover;
   height: 450px;
   position: relative;
-  margin-bottom: 2rem ;
+  margin-bottom: 2rem;
 }
-
 .contenido-hero {
-position: absolute;
-background-color:rgba(0, 0, 0, .7); /**Anterior**/
-background-color: rgb(0 0 0/ 70%) ;/**nueva**/
-width: 100%;
-height: 100%;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
+  position: absolute;
+  background-color: rgba( 0,0,0, .7 ); /** Anterior **/
+  background-color: rgb( 0 0 0 / 70% );
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
-.contenido-hero h2, .contenido-hero p{
+.contenido-hero h2 {
+  color: var(--blanco);
+  font-size: 5rem;
+}
+.contenido-hero h2, 
+.contenido-hero p {
   color: var(--blanco);
 }
 
-.contenido-hero ubicacion{
+.contenido-hero .ubicacion {
   display: flex;
   align-items: flex-end;
 }
 
+
+
 /** Servicios **/
-@media screen and (min-width: 768px) {
-  .servicios{
-    display: grid;
-    grid-template-columns:repeat(3, 1fr);
-  column-gap: 1rem;
+@media (min-width: 768px) {
+  .servicios {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: 1rem;
   }
 }
 
-.servicio{
-display: flex;
-flex-direction: column;
-align-items: center;
+.servicio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.servicios h3{
-color: var(--secundario);
-font-weight: normal;
+.servicio h3 {
+  color: var(--secundario);
+  font-weight: normal;
 }
-
-.servicios p{
-line-height: 2;
-text-align: center;
+.servicio p {
+  line-height: 2;
+  text-align: center;
 }
-
-.servicios .iconos{
+.servicio .iconos {
   height: 15rem;
   width: 15rem;
   background-color: var(--primario);
@@ -173,4 +195,63 @@ text-align: center;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+/** Contacto **/
+.formulario {
+  background-color: var(--gris);
+  width: min( 60rem, 100% ); /** Utilizar el valor más pequeño **/
+  margin: 0 auto;
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
+.formulario fieldset {
+  border: none;
+}
+.formulario legend {
+  text-align: center;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 2rem;
+  color: var(--primario);
+}
+
+@media (min-width: 768px) {
+  .contenedor-campos {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-template-rows: auto auto 20rem ;
+      column-gap: 1rem;
+  }
+
+  .campo:nth-child(3),
+  .campo:nth-child(4) {
+      grid-column: 1 / 3;
+  }
+}
+.campo {
+  margin-bottom: 1rem;
+}
+.campo label {
+  color: var(--blanco);
+  font-weight: bold;
+  margin-bottom: .5rem;
+  display: block;
+}
+.campo textarea {
+  height: 20rem;
+}
+
+.input-text {
+  width: 100%;
+  border: none;
+  padding: 1.5rem;
+  border-radius: .5rem;
+}
+
+/** Footer **/
+.footer {
+  text-align: center;
 }
